@@ -12,6 +12,7 @@ NEWS
   * Fix mod_proxy dead host detection if connect() fails
   * Fix fd leaks in mod_cgi (fds not closed on pipe/fork failures, found by Rodrigo, fixes #2158, #2159)
   * Fix segfault with broken rewrite/redirect patterns (fixes #2140, found by crypt)
+  * Append to previous buffer in con read (fixes #2147, found by liming, CVE-2010-0295)
 
 - 1.4.25 - 2009-11-21
   * mod_magnet: fix pairs() for normal tables and strings (fixes #1307)
